<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchContactsContainer">

    <LinearLayout
        android:id="@+id/contacts_search_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:contentDescription="@string/content_search_setting"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_search_setting"
            android:textSize="18sp"
            android:textColor="#000"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contacts_search_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/contacts_search_title"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_search_setting1"
            android:textSize="14sp"
            android:textColor="#000"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/search_contact_setting"
            tools:ignore="UseCompoundDrawables">

            <Button
                android:id="@+id/search_mobile_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_contact_button"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                android:text="@string/content_all" />

            <Button
                android:id="@+id/search_mobile_shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_active_button"
                android:textColor="@color/primary"
                app:cornerRadius="0dp"
                android:text="@string/contacts_search_setting1_share" />

            <Button
                android:id="@+id/search_mobile_smartphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_contact_button"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                android:text="@string/contacts_search_setting1_phone" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_search_setting2"
            android:textSize="14sp"
            android:textColor="#000"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/search_contact_setting"
            tools:ignore="UseCompoundDrawables">

            <Button
                android:id="@+id/search_target_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_contact_button"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                android:text="@string/content_all" />

            <Button
                android:id="@+id/search_target_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_contact_button"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                android:text="@string/content_company" />

            <Button
                android:id="@+id/search_target_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_contact_button"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                android:text="@string/content_person" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_search_setting3"
            android:textSize="14sp"
            android:textColor="#000"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/search_contact_setting"
            tools:ignore="UseCompoundDrawables">

            <Button
                android:id="@+id/search_method_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_contact_button"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                android:text="@string/contacts_search_setting3_order" />

            <Button
                android:id="@+id/search_method_perfecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_contact_button"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                android:text="@string/contacts_search_setting3_prefecture" />

            <Button
                android:id="@+id/search_method_industry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_contact_button"
                android:textColor="@color/black"
                app:cornerRadius="0dp"
                android:text="@string/contacts_search_setting3_industry" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/container_contacts_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="300dp"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts_search_setting" />

</androidx.constraintlayout.widget.ConstraintLayout>